lita needs ruby 2.0 or higher.
- add rvm module
- use rvm module syntax for installing gem
- pinning to ruby 2.1.5

bug fixes
- refacter init script
- refacter manifests/new.pp
- refacter resource ordering

--- a/templates/lita_init.sh.erb
+++ b/templates/lita_init.sh.erb
@@ -2,14 +2,16 @@
 #
 # Start Stop script for lita
 #
+source /usr/local/rvm/scripts/rvm
 case $1 in
-    'start')
-        nohup /usr/bin/lita -a <%= @adapter %> &
+    start)
+        cd /etc/lita/<%= @lita_name %>
+        /usr/local/rvm/gems/ruby-2.1.5/bin/lita start -d
     ;;
-    'stop')
-        killall /usr/bin/lita
+    stop)
+        /usr/local/rvm/gems/ruby-2.1.5/bin/lita kill
     ;;
-    '*')
+    *)
         echo "Usage: $0 [start|stop]"
     ;;
 esac
